<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            style="@style/normal_text"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="@dimen/layout_margin_16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/vLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/normal_text.Toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin_16dp"
            android:text="@string/currencies"
            android:textColor="@color/gray_stroke"
            app:layout_constraintBottom_toBottomOf="@id/vLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDone"
            style="@style/normal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/layout_margin_16dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@id/vLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vLine"
            style="@style/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <NumberPicker
            android:id="@+id/pCurrency"
            style="@style/normal_text.Toolbar.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>