<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isShowPassword"
            type="Boolean" />

        <variable
            name="isValid"
            type="Boolean" />

        <variable
            name="isFirstNameValid"
            type="Boolean" />

        <variable
            name="isLastNameValid"
            type="Boolean" />

        <variable
            name="isPasswordValid"
            type="Boolean" />

        <variable
            name="fragment"
            type="com.sg.snapshop.view.register.RegisterFragment" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/layout_margin_16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_firstName"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_40dp"
                android:drawableStart="@drawable/ic_name_field"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/first_name"
                android:inputType="textCapWords|textCapSentences"
                android:maxLines="1"
                android:capitalize="words"
                android:paddingEnd="@dimen/layout_margin_48dp"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_16dp"
                android:src="@drawable/ic_checked"
                android:visibility="@{isFirstNameValid ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/edt_firstName"
                app:layout_constraintEnd_toEndOf="@id/edt_firstName"
                app:layout_constraintTop_toTopOf="@id/edt_firstName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_lastName"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_name_field"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/last_name"
                android:inputType="textCapWords|textCapSentences"
                android:capitalize="words"
                android:maxLines="1"
                android:paddingEnd="@dimen/layout_margin_48dp"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_firstName" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_16dp"
                android:src="@drawable/ic_checked"
                android:visibility="@{isLastNameValid ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/edt_lastName"
                app:layout_constraintEnd_toEndOf="@id/edt_lastName"
                app:layout_constraintTop_toTopOf="@id/edt_lastName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:maxLines="1"
                android:paddingEnd="@dimen/layout_margin_48dp"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_lastName" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toggle_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_16dp"
                android:src="@drawable/ic_checked"
                android:visibility="@{isValid ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/edt_email"
                app:layout_constraintEnd_toEndOf="@id/edt_email"
                app:layout_constraintTop_toTopOf="@id/edt_email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                style="@style/normal_text.EditText.Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_field"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/gray_cursor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_4dp"
                android:onClick="@{(v) -> fragment.onClick(v)}"
                android:padding="@dimen/layout_margin_16dp"
                android:src="@{isShowPassword ? @drawable/ic_eye_pass_show : @drawable/ic_eye_pass_hide}"
                android:visibility="@{isPasswordValid == false ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/edt_password"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintTop_toTopOf="@id/edt_password"
                tools:src="@drawable/ic_eyes_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_16dp"
                android:src="@drawable/ic_checked"
                android:visibility="@{isPasswordValid ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@id/edt_password"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintTop_toTopOf="@id/edt_password" />

            <com.sg.snapshop.widget.LoadingButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_32dp"
                android:onClick="@{(v) -> fragment.onClick(v)}"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/edt_password"
                app:text="@string/create_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHaveAccount"
                style="@style/normal_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:fontFamily="@font/montserrat_regular"
                android:padding="@dimen/layout_margin_8dp"
                android:text="@string/have_account"
                app:layout_constraintTop_toBottomOf="@id/btn_register" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_terms_cons"
                style="@style/normal_text.grey"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/layout_margin_16dp"
                android:text="@string/by_signing_up_you_agree_with_our_terms_and_conditions"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHaveAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>