<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.InputType" />

        <variable
            name="fragment"
            type="com.sg.snapshop.view.changepassword.ChangePasswordFragment" />

        <variable
            name="isShow1"
            type="Boolean" />

        <variable
            name="isShow2"
            type="Boolean" />

        <variable
            name="isShow3"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_old_password"
            style="@style/normal_text.EditText"
            android:layout_marginStart="@dimen/layout_margin_24dp"
            android:layout_marginTop="@dimen/layout_margin_32dp"
            android:layout_marginEnd="@dimen/layout_margin_24dp"
            android:drawableStart="@drawable/ic_password_field_gray"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/old_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/gray_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toggle_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin_16dp"
            android:layout_marginEnd="@dimen/layout_margin_4dp"
            android:onClick="@{(v) -> fragment.onClick(v)}"
            android:src="@{isShow1 ? @drawable/ic_eye_pass_show : @drawable/ic_eye_pass_hide}"
            app:layout_constraintBottom_toBottomOf="@id/edt_old_password"
            app:layout_constraintEnd_toEndOf="@id/edt_old_password"
            app:layout_constraintTop_toTopOf="@id/edt_old_password"
            tools:src="@drawable/ic_eyes_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_password"
            style="@style/normal_text.EditText"
            android:drawableStart="@drawable/ic_password_field_gray"
            android:ellipsize="end"
            android:hint="@string/new_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingStart="@dimen/layout_margin_16dp"
            android:paddingEnd="@dimen/layout_margin_64dp"
            android:textCursorDrawable="@drawable/gray_cursor"
            android:layout_marginStart="@dimen/no_padding"
            android:layout_marginEnd="@dimen/no_padding"
            app:layout_constraintStart_toStartOf="@id/edt_old_password"
            app:layout_constraintEnd_toEndOf="@id/edt_old_password"
            app:layout_constraintTop_toBottomOf="@id/edt_old_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toggle_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_4dp"
            android:padding="@dimen/layout_margin_16dp"
            android:onClick="@{(v) -> fragment.onClick(v)}"
            android:src="@{isShow2 ? @drawable/ic_eye_pass_show : @drawable/ic_eye_pass_hide}"
            app:layout_constraintBottom_toBottomOf="@id/edt_new_password"
            app:layout_constraintEnd_toEndOf="@id/edt_new_password"
            app:layout_constraintTop_toTopOf="@id/edt_new_password"
            tools:src="@drawable/ic_eyes_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            style="@style/normal_text.EditText"
            android:drawableStart="@drawable/ic_password_field_gray"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/new_password_confirm"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/no_padding"
            android:layout_marginEnd="@dimen/no_padding"
            android:textCursorDrawable="@drawable/gray_cursor"
            app:layout_constraintEnd_toEndOf="@id/edt_new_password"
            app:layout_constraintStart_toStartOf="@id/edt_new_password"
            app:layout_constraintTop_toBottomOf="@id/edt_new_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toggle_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin_16dp"
            android:layout_marginEnd="@dimen/layout_margin_4dp"
            android:onClick="@{(v) -> fragment.onClick(v)}"
            android:src="@{isShow3 ? @drawable/ic_eye_pass_show : @drawable/ic_eye_pass_hide}"
            app:layout_constraintBottom_toBottomOf="@id/edt_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/edt_confirm_password"
            app:layout_constraintTop_toTopOf="@id/edt_confirm_password"
            tools:src="@drawable/ic_eyes_password" />

        <TextView
            style="@style/normal_text.grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_16dp"
            android:text="@string/your_new_password_must_be_at_least_8_characters_1_uppercase_letter_and_1_number"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"
            app:layout_constraintStart_toStartOf="@id/edt_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/edt_confirm_password"/>

        <com.sg.snapshop.widget.LoadingButton
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_32dp"
            android:layout_marginEnd="@dimen/layout_margin_32dp"
            android:layout_marginBottom="@dimen/layout_margin_64dp"
            android:onClick="@{(v) -> fragment.onClick(v)}"
            app:text="@string/save_my_new_password"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>